[gd_scene load_steps=43 format=3 uid="uid://cth6bsqd4gpyn"]

[ext_resource type="Texture2D" uid="uid://bucad8dmk4srd" path="res://BackGround.png" id="1_37c11"]
[ext_resource type="Script" path="res://back_ground.gd" id="2_dspcp"]
[ext_resource type="Texture2D" uid="uid://c6eky1mcihk0r" path="res://Button.png" id="2_tlkrj"]
[ext_resource type="Texture2D" uid="uid://bkdb7kdkk5d2w" path="res://TeamButton.png" id="3_7phho"]
[ext_resource type="Script" path="res://menu.gd" id="4_8yf8j"]
[ext_resource type="Script" path="res://AddParty.gd" id="4_sj7y7"]
[ext_resource type="Texture2D" uid="uid://dj2uf8qxss3n4" path="res://party1.png" id="5_4t1gk"]
[ext_resource type="Script" path="res://parties.gd" id="5_lh3rl"]
[ext_resource type="Texture2D" uid="uid://yo1y8vqyvfvy" path="res://party2.png" id="6_binsk"]
[ext_resource type="Script" path="res://party.gd" id="7_2sers"]
[ext_resource type="Texture2D" uid="uid://b6iaj3px1lyv" path="res://team3.png" id="7_rbf5e"]
[ext_resource type="Texture2D" uid="uid://hbrfm0a5oqj3" path="res://Gear.png" id="8_2u02f"]
[ext_resource type="Texture2D" uid="uid://3l6yde0wt1ka" path="res://team4.png" id="8_gkobl"]
[ext_resource type="Script" path="res://alchemy.gd" id="9_d7w81"]
[ext_resource type="Script" path="res://gear.gd" id="9_ftp8u"]
[ext_resource type="Texture2D" uid="uid://dhcnmsqr0lo1x" path="res://team5.png" id="9_wsldj"]
[ext_resource type="Texture2D" uid="uid://be6wcoljwhqsv" path="res://BodyF1.png" id="10_m7go5"]
[ext_resource type="Script" path="res://addMember.gd" id="11_4mjc3"]
[ext_resource type="Texture2D" uid="uid://bf1yw7rm3a88k" path="res://BodyM2.png" id="11_7wbgb"]
[ext_resource type="Script" path="res://inventory.gd" id="11_w8wfm"]
[ext_resource type="Texture2D" uid="uid://dasvcrl7j4osl" path="res://Gender.png" id="12_5ltmi"]
[ext_resource type="Texture2D" uid="uid://dbsipqgmpvdre" path="res://AddParty.png" id="12_7bsa7"]
[ext_resource type="Script" path="res://button.gd" id="13_jgrad"]
[ext_resource type="Texture2D" uid="uid://cwc8rugnrr508" path="res://Alchemic.png" id="14_at2sk"]
[ext_resource type="Texture2D" uid="uid://s6iikqgapucq" path="res://Alchemi.png" id="16_gsnyb"]
[ext_resource type="Texture2D" uid="uid://ssn57jltsyhf" path="res://AddMember.png" id="17_jxqre"]
[ext_resource type="Texture2D" uid="uid://nvwkgobwvbrt" path="res://Inventory.png" id="17_vexui"]
[ext_resource type="Texture2D" uid="uid://dypmpbbtmimdr" path="res://Inventori.png" id="18_7ssj8"]
[ext_resource type="Texture2D" uid="uid://dvtwlrdchjm5o" path="res://Adventure.png" id="20_qpsp6"]
[ext_resource type="Texture2D" uid="uid://cxm73bp73bi28" path="res://Tavern.png" id="24_bbuiu"]
[ext_resource type="Script" path="res://adventure.gd" id="24_m11px"]
[ext_resource type="Script" path="res://tavern.gd" id="25_2cu7b"]
[ext_resource type="Texture2D" uid="uid://djaj1x015wcca" path="res://Reserves.png" id="29_5qdd0"]
[ext_resource type="Script" path="res://reserves.gd" id="29_lqf37"]
[ext_resource type="Texture2D" uid="uid://d25avquv1aujs" path="res://AdventureBox.png" id="30_sb2w3"]
[ext_resource type="Script" path="res://Level.gd" id="31_24brd"]
[ext_resource type="Script" path="res://drop_tier.gd" id="32_sjpkp"]
[ext_resource type="Script" path="res://hires.gd" id="34_td7jr"]
[ext_resource type="Script" path="res://reserve_stats.gd" id="37_sg8fo"]
[ext_resource type="Script" path="res://debugstats.gd" id="37_swe2v"]
[ext_resource type="Script" path="res://tavern_stats.gd" id="43_uaxic"]
[ext_resource type="Script" path="res://hired.gd" id="44_e2a1r"]

[node name="Main" type="Node2D"]

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(3.8147e-05, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_37c11")
script = ExtResource("2_dspcp")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Panel" type="Panel" parent="Camera2D"]

[node name="Menu" type="Button" parent="Camera2D/Panel"]
custom_minimum_size = Vector2(64, 64)
layout_direction = 1
layout_mode = 0
offset_left = -800.0
offset_top = -450.0
offset_right = -704.0
offset_bottom = -354.0
focus_mode = 0
icon = ExtResource("2_tlkrj")
flat = true
expand_icon = true

[node name="menu" type="ItemList" parent="Camera2D/Panel/Menu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 0
auto_height = true
item_count = 1
item_0/text = "Exit"
script = ExtResource("4_8yf8j")

[node name="Parties" type="HBoxContainer" parent="Camera2D/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -698.0
offset_top = -450.0
offset_right = -102.0
offset_bottom = -354.0
script = ExtResource("5_lh3rl")

[node name="Party1" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party1"]
visible = false
position = Vector2(13, 14)
scale = Vector2(0.075, 0.075)
texture = ExtResource("5_4t1gk")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party1" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -100.0
offset_top = 120.0
offset_right = -4.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties/Party1/Members"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("17_jxqre")
flat = true
expand_icon = true
script = ExtResource("11_4mjc3")

[node name="Party2" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party2"]
visible = false
position = Vector2(13, 13)
scale = Vector2(0.075, 0.075)
texture = ExtResource("7_rbf5e")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party2" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -200.0
offset_top = 120.0
offset_right = -104.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties/Party2/Members"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("17_jxqre")
flat = true
expand_icon = true
script = ExtResource("11_4mjc3")

[node name="Party3" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party3"]
visible = false
position = Vector2(10, 12)
scale = Vector2(0.09, 0.09)
texture = ExtResource("8_gkobl")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party3" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -300.0
offset_top = 120.0
offset_right = -204.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties/Party3/Members"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("17_jxqre")
flat = true
expand_icon = true
script = ExtResource("11_4mjc3")

[node name="Party4" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party4"]
visible = false
position = Vector2(12, 12)
scale = Vector2(0.075, 0.075)
texture = ExtResource("9_wsldj")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party4" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -400.0
offset_top = 120.0
offset_right = -304.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties/Party4/Members"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("17_jxqre")
flat = true
expand_icon = true
script = ExtResource("11_4mjc3")

[node name="Party5" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party5"]
position = Vector2(13, 14)
scale = Vector2(0.075, 0.075)
texture = ExtResource("5_4t1gk")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party5" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -500.0
offset_top = 120.0
offset_right = -404.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties/Party5/Members"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("17_jxqre")
flat = true
expand_icon = true
script = ExtResource("11_4mjc3")

[node name="Party6" type="Button" parent="Camera2D/Panel/Parties"]
visible = false
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 1
toggle_mode = true
icon = ExtResource("3_7phho")
flat = true
expand_icon = true
script = ExtResource("7_2sers")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D/Panel/Parties/Party6"]
visible = false
position = Vector2(15, 14)
scale = Vector2(0.075, 0.075)
texture = ExtResource("6_binsk")
centered = false

[node name="Members" type="VBoxContainer" parent="Camera2D/Panel/Parties/Party6" groups=["Members"]]
visible = false
layout_mode = 0
offset_left = -600.0
offset_top = 120.0
offset_right = -504.0
offset_bottom = 592.0

[node name="Add" type="Button" parent="Camera2D/Panel/Parties"]
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
tooltip_text = "Cost: 1z"
focus_mode = 0
icon = ExtResource("12_7bsa7")
flat = true
expand_icon = true
script = ExtResource("4_sj7y7")

[node name="Main" type="VBoxContainer" parent="Camera2D/Panel"]
layout_direction = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 725.0
offset_top = -350.0
offset_right = 795.0
offset_bottom = -22.0
grow_horizontal = 0

[node name="Alchemy" type="Button" parent="Camera2D/Panel/Main"]
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("16_gsnyb")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("9_d7w81")

[node name="Inventory" type="Button" parent="Camera2D/Panel/Main"]
texture_repeat = 1
custom_minimum_size = Vector2(96, 96)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("18_7ssj8")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("11_w8wfm")

[node name="Adventure" type="Button" parent="Camera2D/Panel/Main"]
texture_repeat = 1
custom_minimum_size = Vector2(100, 100)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("20_qpsp6")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("24_m11px")

[node name="Tavern" type="Button" parent="Camera2D/Panel/Main"]
texture_repeat = 1
custom_minimum_size = Vector2(100, 100)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("24_bbuiu")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("25_2cu7b")

[node name="Reserves" type="Button" parent="Camera2D/Panel/Main"]
texture_repeat = 1
custom_minimum_size = Vector2(100, 100)
layout_direction = 1
layout_mode = 2
focus_mode = 0
icon = ExtResource("29_5qdd0")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("29_lqf37")

[node name="Gear" type="Sprite2D" parent="Camera2D/Panel"]
position = Vector2(-1100, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_2u02f")
script = ExtResource("9_ftp8u")

[node name="BodyF" type="Sprite2D" parent="Camera2D/Panel/Gear"]
texture = ExtResource("10_m7go5")

[node name="BodyM" type="Sprite2D" parent="Camera2D/Panel/Gear"]
visible = false
texture = ExtResource("11_7wbgb")

[node name="Button" type="Button" parent="Camera2D/Panel/Gear"]
layout_direction = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -560.0
offset_top = -512.0
offset_right = -464.0
offset_bottom = -416.0
grow_horizontal = 2
toggle_mode = true
icon = ExtResource("12_5ltmi")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("13_jgrad")

[node name="Alchemic" type="Sprite2D" parent="Camera2D/Panel"]
visible = false
position = Vector2(100, -205)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_at2sk")

[node name="Button" type="Button" parent="Camera2D/Panel/Alchemic"]
layout_direction = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -534.5
offset_top = -386.0
offset_right = -244.5
offset_bottom = -338.0
grow_horizontal = 2
focus_mode = 0
toggle_mode = true
flat = true
icon_alignment = 1
expand_icon = true

[node name="TextEdit" type="TextEdit" parent="Camera2D/Panel/Alchemic"]
offset_left = -196.0
offset_top = 332.0
offset_right = -16.0
offset_bottom = 376.0

[node name="TextEdit2" type="TextEdit" parent="Camera2D/Panel/Alchemic"]
offset_left = 18.0
offset_top = 332.0
offset_right = 200.0
offset_bottom = 374.0

[node name="Adventure" type="Sprite2D" parent="Camera2D/Panel"]
position = Vector2(100, 205)
scale = Vector2(0.5, 0.5)
texture = ExtResource("30_sb2w3")

[node name="Predict" type="Button" parent="Camera2D/Panel/Adventure"]
offset_left = -196.0
offset_top = 332.0
offset_right = -105.0
offset_bottom = 363.0
scale = Vector2(2, 2)
text = "Predict"

[node name="Start" type="Button" parent="Camera2D/Panel/Adventure"]
offset_left = 18.0
offset_top = 332.0
offset_right = 109.0
offset_bottom = 363.0
scale = Vector2(2, 2)
text = "Start
"

[node name="Level" type="ItemList" parent="Camera2D/Panel/Adventure"]
custom_minimum_size = Vector2(200, 0)
offset_left = -200.0
offset_top = -230.0
offset_right = 50.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
max_text_lines = 8
script = ExtResource("31_24brd")

[node name="DropTier" type="RichTextLabel" parent="Camera2D/Panel/Adventure"]
offset_left = -200.0
offset_top = -330.0
offset_right = 50.0
offset_bottom = -280.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
script = ExtResource("32_sjpkp")

[node name="Step" type="TextEdit" parent="Camera2D/Panel/Adventure"]
offset_left = -200.0
offset_top = 264.0
offset_right = 50.0
offset_bottom = 314.0
size_flags_horizontal = 3

[node name="Search" type="TextEdit" parent="Camera2D/Panel/Adventure"]
offset_left = -200.0
offset_top = -280.0
offset_right = -75.0
offset_bottom = -255.0
scale = Vector2(2, 2)
context_menu_enabled = false

[node name="Stats" type="RichTextLabel" parent="Camera2D/Panel/Adventure"]
offset_left = 110.0
offset_top = -270.0
offset_right = 360.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
script = ExtResource("37_swe2v")

[node name="Tavern" type="Sprite2D" parent="Camera2D/Panel"]
visible = false
position = Vector2(506, 205)
scale = Vector2(0.5, 0.5)
texture = ExtResource("30_sb2w3")

[node name="Refresh" type="Button" parent="Camera2D/Panel/Tavern"]
offset_left = -196.0
offset_top = 332.0
offset_right = -105.0
offset_bottom = 363.0
scale = Vector2(2, 2)
text = "Refresh"

[node name="Add_Hire" type="Button" parent="Camera2D/Panel/Tavern"]
offset_left = 18.0
offset_top = 332.0
offset_right = 111.0
offset_bottom = 363.0
scale = Vector2(2, 2)
button_mask = 3
text = "Add/Hire"

[node name="Hires" type="ItemList" parent="Camera2D/Panel/Tavern"]
custom_minimum_size = Vector2(250, 0)
offset_left = -342.0
offset_top = -330.0
offset_right = 108.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
max_text_lines = 8
script = ExtResource("34_td7jr")

[node name="TavernStats" type="RichTextLabel" parent="Camera2D/Panel/Tavern"]
offset_left = 113.0
offset_top = -330.0
offset_right = 363.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
script = ExtResource("43_uaxic")

[node name="Reserves" type="Sprite2D" parent="Camera2D/Panel"]
visible = false
position = Vector2(506, 205)
scale = Vector2(0.5, 0.5)
texture = ExtResource("30_sb2w3")

[node name="Fire" type="Button" parent="Camera2D/Panel/Reserves"]
offset_left = -196.0
offset_top = 332.0
offset_right = -108.0
offset_bottom = 363.0
scale = Vector2(2, 2)
text = "Fire"

[node name="Add" type="Button" parent="Camera2D/Panel/Reserves"]
offset_left = 18.0
offset_top = 332.0
offset_right = 111.0
offset_bottom = 363.0
scale = Vector2(2, 2)
text = "Add"

[node name="Hired" type="ItemList" parent="Camera2D/Panel/Reserves"]
custom_minimum_size = Vector2(250, 0)
offset_left = -342.0
offset_top = -330.0
offset_right = 108.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
max_text_lines = 8
script = ExtResource("44_e2a1r")

[node name="Stats" type="RichTextLabel" parent="Camera2D/Panel/Reserves"]
offset_left = 113.0
offset_top = -330.0
offset_right = 363.0
offset_bottom = 270.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
script = ExtResource("37_sg8fo")

[node name="Inventory" type="Sprite2D" parent="Camera2D/Panel"]
visible = false
position = Vector2(500, -205)
scale = Vector2(0.114, 0.114)
texture = ExtResource("17_vexui")

[node name="GridContainer" type="GridContainer" parent="Camera2D/Panel"]
layout_mode = 0
offset_left = 60.0
offset_top = 108.0
offset_right = 100.0
offset_bottom = 148.0

[connection signal="pressed" from="Camera2D/Panel/Menu" to="Camera2D/Panel/Menu/menu" method="_on_menu_pressed"]
[connection signal="item_clicked" from="Camera2D/Panel/Menu/menu" to="Camera2D/Panel/Menu/menu" method="_on_item_clicked"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party1" to="Camera2D/Panel/Parties/Party1" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party1/Members/Add" to="Camera2D/Panel/Parties/Party1/Members/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party2" to="Camera2D/Panel/Parties/Party2" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party2/Members/Add" to="Camera2D/Panel/Parties/Party2/Members/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party3" to="Camera2D/Panel/Parties/Party3" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party3/Members/Add" to="Camera2D/Panel/Parties/Party3/Members/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party4" to="Camera2D/Panel/Parties/Party4" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party4/Members/Add" to="Camera2D/Panel/Parties/Party4/Members/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party5" to="Camera2D/Panel/Parties/Party5" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party5/Members/Add" to="Camera2D/Panel/Parties/Party5/Members/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Party6" to="Camera2D/Panel/Parties/Party6" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Parties/Add" to="Camera2D/Panel/Parties/Add" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Main/Alchemy" to="Camera2D/Panel/Main/Alchemy" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Main/Inventory" to="Camera2D/Panel/Main/Inventory" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Main/Adventure" to="Camera2D/Panel/Main/Adventure" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Main/Tavern" to="Camera2D/Panel/Main/Tavern" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Main/Reserves" to="Camera2D/Panel/Main/Reserves" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Gear/Button" to="Camera2D/Panel/Gear/Button" method="_on_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Adventure/Predict" to="Camera2D/Panel/Adventure/Stats" method="_on_predict_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Adventure/Start" to="Camera2D/Panel/Adventure/Stats" method="_on_start_pressed"]
[connection signal="item_selected" from="Camera2D/Panel/Adventure/Level" to="Camera2D/Panel/Adventure/Level" method="_on_item_selected"]
[connection signal="item_selected" from="Camera2D/Panel/Adventure/Level" to="Camera2D/Panel/Adventure/DropTier" method="_on_level_item_selected"]
[connection signal="item_selected" from="Camera2D/Panel/Adventure/Level" to="Camera2D/Panel/Adventure/Stats" method="_on_level_item_selected"]
[connection signal="text_changed" from="Camera2D/Panel/Adventure/Search" to="Camera2D/Panel/Adventure/Level" method="add_levels"]
[connection signal="pressed" from="Camera2D/Panel/Tavern/Refresh" to="Camera2D/Panel/Tavern/Hires" method="_on_pressed"]
[connection signal="gui_input" from="Camera2D/Panel/Tavern/Add_Hire" to="Camera2D/Panel/Tavern/Hires" method="_on_add_hire_gui_input"]
[connection signal="pressed" from="Camera2D/Panel/Tavern/Add_Hire" to="Camera2D/Panel/Tavern/Hires" method="_on_hire_pressed"]
[connection signal="item_selected" from="Camera2D/Panel/Tavern/Hires" to="Camera2D/Panel/Tavern/TavernStats" method="_on_hires_item_selected"]
[connection signal="pressed" from="Camera2D/Panel/Reserves/Fire" to="Camera2D/Panel/Reserves/Hired" method="_on_terminate_pressed"]
[connection signal="pressed" from="Camera2D/Panel/Reserves/Add" to="Camera2D/Panel/Reserves/Hired" method="_on_add_pressed"]
[connection signal="item_selected" from="Camera2D/Panel/Reserves/Hired" to="Camera2D/Panel/Reserves/Hired" method="_on_item_selected"]
[connection signal="item_selected" from="Camera2D/Panel/Reserves/Hired" to="Camera2D/Panel/Reserves/Stats" method="_on_hired_item_selected"]
